--- a/admin.html
+++ b/admin.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <!-- Chart.js Library for statistical charts -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.2/dist/chart.umd.min.js"></script>
-  <link rel="stylesheet" href="rep.css">
-  <link rel="stylesheet" href="css.css">
+  <link rel="stylesheet" href="css/rep.css">
+  <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
 
